# CrystalBoard

./: .gitignore  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  canvas.cpp  canvas.h  colorpickerwidget.cpp  colorpickerwidget.h  helppanel.cpp  helppanel.h  mainwindow.cpp  mainwindow.h  transparentwidget.cpp  transparentwidget.h
.github/workflows/: release.yml
docs/: HYPRLAND_INTEGRATION.md
src/: canvas.cpp  helppanel.cpp  main.cpp  mainwindow.cpp  mainwindow.h
